--- a/build.yml
+++ b/build.yml
@@ -1,6 +1,6 @@
 ---
 - name: Build a 3-Node Kubernetes cluster with containerd runtime cri.
-  hosts: all
+  hosts: kubecluster
   become: true
   gather_facts: true
   roles:
