--- a/kubecluster/tasks/main.yml
+++ b/kubecluster/tasks/main.yml
@@ -39,3 +39,7 @@
   when: v_initk8s is true
   ansible.builtin.import_tasks: init_k8s.yml
 
+
+- name: Import Kube Cluster initialization tasks
+  when: v_joinworkers is true
+  ansible.builtin.import_tasks: join_worker_node.yml
