--- a/kubecluster/tasks/init_k8s.yml
+++ b/kubecluster/tasks/init_k8s.yml
@@ -49,4 +49,4 @@
 
 - name: Set Token as Fact
   ansible.builtin.set_fact:
-     join_token: "{{join_node_token.std}}"
+     join_token: "{{join_node_token.stdout}}"
