--- a/kubecluster/tasks/init_k8s.yml
+++ b/kubecluster/tasks/init_k8s.yml
@@ -48,5 +48,9 @@
   register: join_node_token
 
 - name: Set Token as Fact
-  ansible.builtin.set_fact:
-     join_token: "{{join_node_token.stdout}}"
+  ansible.builtin.debug:
+     var: join_node_token
+
+#- name: Set Token as Fact
+#  ansible.builtin.set_fact:
+#     join_token: "{{join_node_token.stdout}}"
