--- a/kubecluster/tasks/init_k8s.yml
+++ b/kubecluster/tasks/init_k8s.yml
@@ -44,13 +44,13 @@
 
 - name: Get Token to join workers to control-plane
   when: " 'control' in inventory_hostname"
-  ansible.builtin.shell:  kubeadm token list |grep -v NEVER |awk '{print $1}'
+  ansible.builtin.shell:  "kubeadm token list |grep -v NEVER |awk '{print $1}' "
   register: join_node_token
 
 - name: Set Token as Fact
   ansible.builtin.debug:
      var: join_node_token
 
-#- name: Set Token as Fact
-#  ansible.builtin.set_fact:
-#     join_token: "{{join_node_token.stdout}}"
+- name: Set Token as Fact
+  ansible.builtin.set_fact:
+     join_token: "{{join_node_token.stdout}}"
