--- a/kubecluster/tasks/join_worker_node.yml
+++ b/kubecluster/tasks/join_worker_node.yml
@@ -3,7 +3,7 @@
   ansible.builtin.shell: echo 1 > /proc/sys/net/ipv4/ip_forward
 
 - name: Join command
-  when: " 'worker' in inventory_hostname "
+  when: " inventory_hostname in groups['workers']
   ansible.builtin.shell: kubeadm join {{control_plane_fqdn}}:6443 --token {{join_token}} 2>&1|tee /var/log/kube-join.log
   register: cmd
 
