changed sysctl handler

--- a/kubecluster/handlers/main.yml
+++ b/kubecluster/handlers/main.yml
@@ -1,4 +1,6 @@
 ---
 
 - name: sysctl_handler
-  ansible.builtin.shell: sysctl -p --system
+  ansible.builtin.service:
+     name: systemd-sysctl
+     state: restarted
