--- a/kubecluster/tasks/join_worker_node.yml
+++ b/kubecluster/tasks/join_worker_node.yml
@@ -1,16 +1,13 @@
 ---
-- name: Ensure that IP-Forwarding is enabled in the kernel.
-  ansible.builtin.shell: echo 1 > /proc/sys/net/ipv4/ip_forward
-
+#kubeadm token list. Join tokens are only good for 24h by default.
+#kubeadm token create. creates a new token to join nodes with.. remember this!!
+ 
+ 
 - name: Join command
-  when: " inventory_hostname in groups['workers'] "
+  when: inventory_hostname in groups['workers']
   ansible.builtin.shell: kubeadm join {{control_plane_fqdn}}:6443 --token {{join_token}} 2>&1|tee /var/log/kube-join.log
   register: cmd
 
 - name: Print output of join
   ansible.builtin.debug:
      var: cmd
-
-
-# kubeadm token list. Join tokens are only good for 24h by default.
-# @ kubeadm token create. creates a new token to join nodes with.. remember this!!
