--- a/kubecluster/tasks/join_worker_node.yml
+++ b/kubecluster/tasks/join_worker_node.yml
@@ -1,11 +1,7 @@
 ---
-#kubeadm token list. Join tokens are only good for 24h by default.
-#kubeadm token create. creates a new token to join nodes with.. remember this!!
- 
- 
 - name: Join command
-  when: inventory_hostname in groups['workers']
-  ansible.builtin.shell: kubeadm join {{control_plane_fqdn}}:6443 --token {{join_token}} 2>&1|tee /var/log/kube-join.log
+  when: "inventory_hostname in groups['workers'] "
+  ansible.builtin.shell: kubeadm join {{control_plane_fqdn}}:6443 --token {{hostvars['control']['token']}} 2>&1|tee /var/log/kube-join.log
   register: cmd
 
 - name: Print output of join
