--- a/kubecluster/tasks/join_worker_node.yml
+++ b/kubecluster/tasks/join_worker_node.yml
@@ -1,4 +1,8 @@
 ---
-- name: DEBUG - IS THIS EVEN GETTING EXECUTED....?
-  debug:
-    msg: "I DIDNT GET SKIPPED THIS TIME !!!!"
+- name: Join command
+  ansible.builtin.shell:  hostname |grep control || kubeadm join {{control_plane_fqdn}}:6443 --token {{hostvars['control']['token']}} 2>&1|tee /var/log/kube-join.log
+  register: cmd
+
+- name: Print output of join
+  ansible.builtin.debug:
+     var: cmd.stdout
