--- a/kubecluster/tasks/configure_kernel_params.yml
+++ b/kubecluster/tasks/configure_kernel_params.yml
@@ -19,3 +19,5 @@
               net.bridge.bridge-nf-call-ip6tables = 1
               net.bridge.bridge-nf-call-iptables = 1
 
+- name: Flush Handlers to apply Ip routing rules now.
+  ansible.builtin.meta: flush_handlers
