--- a/kubecluster/defaults/main.yml
+++ b/kubecluster/defaults/main.yml
@@ -1,5 +1,7 @@
 ---
 # Main defaults definitions for ansible role kubecluster
+ pod_net_cidr: 10.10.0.0/16
+ service_net_cidr: 10.20.0.0/16
  control_plane_fqdn: control.k8s.sanderson.com
  v_configurehosts: True
  v_configurentp: True
