--- a/kubecluster/tasks/init_k8s.yml
+++ b/kubecluster/tasks/init_k8s.yml
@@ -34,7 +34,7 @@
 
 - name: Kubeadm Initialize POD network
   when: " 'control' in inventory_hostname"
-  ansible.builtin.shell: kubeadm init --pod-network-cidr=10.244.0.0/16
+  ansible.builtin.shell: kubeadm init --pod-network-cidr={{pod_net_cidr}} --service-cidr={{service_net_cidr}}
   register: kubeadm_podnetinit
 
 - name: View Results of Initialization of Master
