--- a/kubecluster/tasks/config_calico.yml
+++ b/kubecluster/tasks/config_calico.yml
@@ -1,10 +1,12 @@
 ---
 - name: Install and Configure Calico CNI  STEP1
+  become:false
   ansible.builtin.copy:  
     src: tigera-operator.yaml
-    dest: /root/
+    dest: /tmp/
 
 - name: Install CNI config file STEP1
+  become:false
   ansible.builtin.shell:  kubectl create -f /root/tigera-operator.yaml
   register: cni_step1
 
@@ -15,13 +17,15 @@
 
 
 - name: Copy Custom CNI config file to master node
+  become:false
   ansible.builtin.copy:
     src: custom-cni.yml.j2
-    dest: /root/
+    dest: /tmp/
     
 
 - name: Install and Configure Calico CNI  STEP2
-  ansible.builtin.shell:  kubectl create -f /root/custom-cni.yml
+  become:false
+  ansible.builtin.shell: kubectl create -f /tmp/custom-cni.yml
   register: cni_step2
 
 - name: Debug CALICO Step2 
