--- a/kubecluster/tasks/configure_regular_user.yml
+++ b/kubecluster/tasks/configure_regular_user.yml
@@ -1,16 +1,31 @@
 ---
 - name: Configure automation user to be able to access kubectl
   when: "  inventory_hostname in groups['master'] "
+  ansible.builtin.file:
+    name: /home/automation/.kube
+    state: directory
+    owner: automation
+    group: automation
+    mode: 0755
+
+- name: Configure automation user to be able to access kubectl
+  when: "  inventory_hostname in groups['master'] "
   ansible.builtin.copy:
     src: /etc/kubernetes/admin.conf
     dest: /home/automation/.kube/config
     remote_src: true
+    owner: automation
+    group: automation
+    mode: 0755
 
 - name: Add to bashrc file
   when: "  inventory_hostname in groups['master'] "
   ansible.builtin.lineinfile:
     path: /home/automation/.bashrc
     line: export KUBECONFIG=/home/automation/.kube/config
+    owner: automation
+    group: automation
+    mode: 0755
 
 
 - name: Apply bashrc changes
