ignoreerrors on calico step2.. run it manually during role execution for now.   kubectl apply -f /home/automation/custom-cni.yml

--- a/kubecluster/tasks/config_calico.yml
+++ b/kubecluster/tasks/config_calico.yml
@@ -23,7 +23,9 @@
     dest: /home/automation/custom-cni.yml
     
 
+### THIS ALWAYS FAILS BUT RUNS PERFECTLY ON BASH TERMINAL AS automation user... wth
 - name: Install and Configure Calico CNI  STEP2
+  ignore_errors: true
   become: false
   ansible.builtin.shell: kubectl create -f /home/automation/custom-cni.yml --validate=false
   register: cni_step2
