comment out set worker node type for now

--- a/kubecluster/tasks/join_worker_node.yml
+++ b/kubecluster/tasks/join_worker_node.yml
@@ -5,15 +5,18 @@
   register: cmd
 
 - name: Print output of join
+  when: " inventory_hostname in groups['workers'] "
   ansible.builtin.debug:
      var: cmd.stdout
 
-- name: Set worker node to type "worker"
-  ansible.builtin.shell: kubectl label node {{inventory_hostname}}  node-role.kubernetes.io/worker=worker
-  register: set_worker_type
-
-- name: DEBUG | Changing nodes to worker type
-  ansible.builtin.debug:
-    var: set_worker_type
-
+#- name: Set worker node to type "worker"
+#  when: " inventory_hostname in groups['workers'] "
+#  ansible.builtin.shell: kubectl label node {{inventory_hostname}}  node-role.kubernetes.io/worker=worker
+#  register: set_worker_type
+#
+#- name: DEBUG | Changing nodes to worker type
+#  when: " inventory_hostname in groups['workers'] "
+#  ansible.builtin.debug:
+#    var: set_worker_type
+#
 
