--- a/kubecluster/tasks/deploy_kube_dashboard.yml
+++ b/kubecluster/tasks/deploy_kube_dashboard.yml
@@ -21,6 +21,7 @@
     owner: automation
     group: automation
     mode: 0755
+    remote_src: true
 
 - name: Download latest HELM source code from GITHUB
   when: " inventory_hostname in groups['master'] "
