--- a/kubecluster/tasks/deploy_kube_dashboard.yml
+++ b/kubecluster/tasks/deploy_kube_dashboard.yml
@@ -56,6 +56,7 @@
     var: helm_add_repo
 
 - name: Deploy Dashboard
+  become: false
   when: " inventory_hostname in groups['master'] "
   ansible.builtin.shell: /usr/local/helm/bin/helm upgrade --install kubernetes-dashboard kubernetes-dashboard/kubernetes-dashboard --create-namespace --namespace kubernetes-dashboard
   register: deploy_dashboard
