--- a/kubecluster/tasks/disable_swap.yml
+++ b/kubecluster/tasks/disable_swap.yml
@@ -1,4 +1,4 @@
 ---
-- name: Disable SWAP
+- name: PREPARE |  Disable SWAP
   ansible.builtin.shell: swapoff -a && sed -ie '/swap/s/^/#/g' /etc/fstab
 
