--- a/kubecluster/tasks/config_calico.yml
+++ b/kubecluster/tasks/config_calico.yml
@@ -1,41 +1,54 @@
 ---
-- name: Install and Configure Calico CNI  STEP1
+- name: CALICO | Install and Configure Calico CNI  STEP1
   when: " inventory_hostname in groups['master'] "
   become: false
   ansible.builtin.copy:  
     src: tigera-operator.yaml
     dest: /tmp/
+    mode: 0644
+    owner: automation
+    group: automation
 
-- name: Install CNI config file STEP1
+- name:  CALICO |Install Tigera-Operator (cni stuff...?)
   when: " inventory_hostname in groups['master'] "
   become: false
   ansible.builtin.shell:  kubectl create -f /tmp/tigera-operator.yaml
   register: cni_step1
 
-
-- name: Debug CALICO Step1 
+- name: DEBUG | Tigera-Operator install details
   when: " inventory_hostname in groups['master'] "
   ansible.builtin.debug:
     var: cni_step1
 
- # We use a template for this task because we want to be able to define a var that has our POD_NETWORK_CIDR. Default: 10.10.0.0 subnet 16bits
-- name: Copy Custom CNI config file to master node
+- name: CALICO | Copy Custom CNI config file to master node
   when: " inventory_hostname in groups['master'] "
   become: false
   ansible.builtin.template:
     src: custom-cni.yml
-    dest: /home/automation/custom-cni.yml
-    
+    dest: /tmp/
+    mode: 0644
+    owner: automation
+    group: automation
 
-### THIS ALWAYS FAILS BUT RUNS PERFECTLY ON BASH TERMINAL AS automation user... wth
-- name: Install and Configure Calico CNI  STEP2
+
+- name: PAUSE | Letting  cluster components "settle" before applying CALICO config. Will fail to install CALICO if we dont
+  when: " inventory_hostname in groups['master'] "
+  ansible.builtin.pause:
+    seconds: 10
+
+- name: CALICO | Install CALICO CNI
   when: " inventory_hostname in groups['master'] "
   ignore_errors: true
   become: false
-  ansible.builtin.shell: kubectl create -f /home/automation/custom-cni.yml --validate=false
+  ansible.builtin.shell: kubectl create -f /tmp/custom-cni.yml --validate=false >/tmp/calico.log 2>&1
   register: cni_step2
 
-- name: Debug CALICO Step2 
+- name: DEBUG | Calico CNI Install details
   when: " inventory_hostname in groups['master'] "
   ansible.builtin.debug:
     var: cni_step2
+
+#- name: PAUSE | RUN THIS ON CONTROL NODE NOW!! kubectl create -f /tmp/custom-cni.yml --validate=false
+#  when: " inventory_hostname in groups['master'] "
+#  ansible.builtin.pause:
+#    seconds: 10
