--- a/kubecluster/tasks/configure_hosts.yml
+++ b/kubecluster/tasks/configure_hosts.yml
@@ -1,5 +1,5 @@
 ---
-- name: Template for /etc/hosts file for home lab
+- name: PREPARE | Template for /etc/hosts file for home lab
   ansible.builtin.template:
      src: hosts.j2
      dest: /etc/hosts
