--- a/kubecluster/tasks/configure_nginx-ingress-controller.yml
+++ b/kubecluster/tasks/configure_nginx-ingress-controller.yml
@@ -2,18 +2,16 @@
 - name: HELM | Install Nginx Ingress Controller
   become: false
   when: 
-    - v_configure_nginx_ingress is true
     - " inventory_hostname in groups['master'] "
-    - v_configure_helm is true 
+    - v_configurehelm is true 
   ansible.builtin.shell: helm upgrade --install ingress-nginx ingress-nginx --repo https://kubernetes.github.io/ingress-nginx --namespace ingress-nginx --create-namespace 
   register: ingress_installer
 
 - name: DEBUG | Results of Ingress Controller Install
   become: false
   when: 
-    - v_configure_nginx_ingress is true
     - " inventory_hostname in groups['master'] "
-    - v_configure_helm is true 
+    - v_configurehelm is true 
   ansible.builtin.debug:
     var: ingress_installer
 
