--- a/kubecluster/tasks/init_k8s.yml
+++ b/kubecluster/tasks/init_k8s.yml
@@ -1,5 +1,5 @@
 ---
-- name: Start Kubelet service
+- name: BUILD K8S | Start Kubelet service
   loop:
     - kubelet
     - containerd
@@ -8,46 +8,46 @@
     state: restarted
     enabled: true
 
-- name: Configure containerd
+- name: BUILD K8S |  Configure containerd
   ansible.builtin.shell: containerd config default > /etc/containerd/config.toml
 
-- name: Enable Systemd Cgroups for containerd
+- name: BUILD K8S |  Enable Systemd Cgroups for containerd
   ansible.builtin.replace:
      path: /etc/containerd/config.toml
      regexp: ^\s*SystemdCgroup.*false.*$
      replace: '            SystemdCgroup = true'
 
-- name: Restart containerd
+- name: BUILD K8S |  Restart containerd
   ansible.builtin.service:
      name: containerd
      state: restarted
 
-- name: Docker Pull Kube Master images to Control Plane node
+- name: BUILD K8S |  Docker Pull Kube Master images to Control Plane node
   when: " 'control' in inventory_hostname"
   ansible.builtin.shell: kubeadm config images pull
   register: kubeadm_controlplaneinit
 
-- name: View Results
+- name: DEBUG |  Docker Pull Kube Master Images
   when: " 'control' in inventory_hostname"
   ansible.builtin.debug:
     var: kubeadm_controlplaneinit
 
-- name: Kubeadm Initialize POD network
+- name: BUILD K8S |  Kubeadm Initialize POD network
   when: " 'control' in inventory_hostname"
   ansible.builtin.shell: kubeadm init --pod-network-cidr={{pod_net_cidr}} --service-cidr={{service_net_cidr}} --service-dns-domain={{service_dns_domain}}
   register: kubeadm_podnetinit
 
-- name: View Results of Initialization of Master
+- name: DEBUG | View Results of Initialization of Master
   when: " 'control' in inventory_hostname"
   ansible.builtin.debug:
     var: kubeadm_podnetinit
 
-- name: Get Token to join workers to control-plane
+- name: BUILD K8S | Get Token to join workers to control-plane
   when: " 'control' in inventory_hostname"
   ansible.builtin.shell:  "kubeadm token list |grep -v TOKEN |awk '{print $1}' "
   register: join_node_token
 
-- name: Set Token as Fact
+- name:  DEBUG | Join Token Create
   when: " 'control' in inventory_hostname"
   ansible.builtin.debug:
      var: join_node_token
