--- a/kubecluster/tasks/join_worker_node.yml
+++ b/kubecluster/tasks/join_worker_node.yml
@@ -1,22 +1,10 @@
 ---
-- name: Join command
+- name: JOIN | Nodes to Control-Plane
   when: " inventory_hostname in groups['workers'] "
-  ansible.builtin.shell: kubeadm join {{control_plane_fqdn}}:6443 --discovery-token-unsafe-skip-ca-verification  --token {{hostvars['control']['join_token']}} 2>&1|tee /var/log/kube-join.log
+  ansible.builtin.shell: kubeadm join {{control_plane}}:6443 --discovery-token-unsafe-skip-ca-verification  --token {{hostvars['control']['join_token']}} 2>&1|tee /var/log/kube-join.log
   register: cmd
 
-- name: Print output of join
+- name: DEBUG | JOIN output
   when: " inventory_hostname in groups['workers'] "
   ansible.builtin.debug:
      var: cmd.stdout
-
-#- name: Set worker node to type "worker"
-#  when: " inventory_hostname in groups['workers'] "
-#  ansible.builtin.shell: kubectl label node {{inventory_hostname}}  node-role.kubernetes.io/worker=worker
-#  register: set_worker_type
-#
-#- name: DEBUG | Changing nodes to worker type
-#  when: " inventory_hostname in groups['workers'] "
-#  ansible.builtin.debug:
-#    var: set_worker_type
-#
-
